2005-09-02  Sven Neumann  <sven@gimp.org>

	* modules/Makefile.am: applied patch that fixes a build issue on
	Cygwin (bug #314893).

2005-09-02  Sven Neumann  <sven@gimp.org>

	* app/tools/gimptextoptions.c
	* app/widgets/gimpwidgets-utils.[ch]: dropped the labels from text
	tool options that have icons. Reduces visual clutter.

2005-09-02  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell-callbacks.c
	(gimp_display_shell_canvas_expose): draw guides over the grid.

2005-09-02  Michael Natterer  <mitch@gimp.org>

	* tools/test-clipboard.c (test_clipboard_copy_callback): don't
	quit the main loop after transferring the data to GTK, it needs a
	running main loop to get the chunks transferred to X.

2005-09-02  Sven Neumann  <sven@gimp.org>

	* app/dialogs/convert-dialog.c
	* app/dialogs/image-merge-layers-dialog.c
	* app/dialogs/layer-add-mask-dialog.c
	* app/dialogs/offset-dialog.c: use verbs instead of "OK" in the
	confirmative dialog button.

2005-09-02  Sven Neumann  <sven@gimp.org>

	* AUTHORS
	* app/dialogs/authors.h: regenerated.

2005-09-02  Sven Neumann  <sven@gimp.org>

	* plug-ins/bmp/bmpwrite.c
	* plug-ins/common/aa.c
	* plug-ins/common/csource.c
	* plug-ins/common/gbr.c
	* plug-ins/common/gif.c
	* plug-ins/common/gih.c
	* plug-ins/common/gtm.c
	* plug-ins/common/mail.c
	* plug-ins/common/mng.c
	* plug-ins/common/pat.c
	* plug-ins/common/png.c
	* plug-ins/common/pnm.c
	* plug-ins/common/postscript.c
	* plug-ins/common/psp.c
	* plug-ins/common/raw.c
	* plug-ins/common/sunras.c
	* plug-ins/common/svg.c
	* plug-ins/common/tga.c
	* plug-ins/common/tiff.c
	* plug-ins/common/xbm.c
	* plug-ins/common/xpm.c
	* plug-ins/fits/fits.c
	* plug-ins/gfli/gfli.c
	* plug-ins/jpeg/jpeg-save.c
	* plug-ins/script-fu/script-fu-server.c
	* plug-ins/sgi/sgi.c
	* plug-ins/winicon/icodialog.c
	* plug-ins/xjt/xjt.c: use verbs instead of "OK" in the
	confirmative dialog button.

2005-09-02  Tor Lillqvist  <tml@novell.com>
