@@ -1,5 +1,11 @@
 2005-09-02  Sven Neumann  <sven@gimp.org>
 
+	* app/widgets/gimpcontainergridview.c
+	* app/widgets/gimpcontainertreeview.c: allow to popup menus on
+	empty container views using the standard Shift-F10 keybinding.
+
+2005-09-02  Sven Neumann  <sven@gimp.org>
+
 	* modules/Makefile.am: applied patch that fixes a build issue on
 	Cygwin (bug #314893).
 
